@@ -13,7 +13,8 @@
 
 - Fixed infinite loop when using --loopback in case all hashes have been cracked
 - Fixed double fclose() using AMDGPU-Pro on sysfs compatible platform: Leading to segfault
-- Fixed kernel loops in leading to slower performance in --increment mode 
+- Fixed kernel loops in --increment mode leading to slower performance
+- Fixed custom char parsing code in maskfiles in --increment mode: Custom charset wasn't used
 - Removed access to readlink() on FreeBSD: Causes problem building hashcat
 
 ##
